<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UUiki</string>
    <string name="action_settings">Settings</string>
    <string name="wiki_system">Wiki System</string>
    <string name="title_activity_view_page">UUiki: View Page</string>
    <string name="title_activity_edit_project">UUiki: Edit Project</string>
    <string name="title_activity_search_page">UUiki: Search Page</string>
    <string name="title_activity_edit_page">UUiki: Edit Page</string><string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="course_id">Course ID</string>
    <string name="gpa">GPA</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="create_project">Create Project</string>
    <string name="create_page">Create Page</string>
    <string name="project_name">Project Name</string>
    <string name="page_text">Page Text</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="page_name">Page Name</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="hello_blank_fragment">Test</string>
    <color name="material_blue_grey_800">#3333AA</color>
    <string name="title_activity_pages">Pages</string>
    <string name="ok">OK</string>
    <string name="search_hint">Search Project Pages</string>
    <string name="search_text">Search</string>
    <string name="add_link">Link</string>
    <string name="add_category">Category</string>
    <string name="editPage">Edit Page</string>
    <string name="helpPage">Help Page</string>
    <string name="action_search">Search</string>
	<string name="deletePage">Delete Page</string>
	<string name="newPage">New Page</string>
	<string name="defaultDrawerText">Default</string>
	<string name="deleteProject">Delete Project</string>
	<string name="homePage">Home Page</string>
	
</resources>
