<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.wiki.presentation.CoursesActivity" >

    <Button
        android:id="@+id/buttonSaveProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled="true"
        android:onClick="buttonSaveProjectOnClick"
        android:text="@string/save" />

    <Button
        android:id="@+id/buttonCancelProjectEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSaveProject"
        android:layout_alignBottom="@+id/buttonSaveProject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:onClick="buttonCancelProjectEditOnClick"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/projectNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCancelProjectEdit"
        android:layout_alignStart="@+id/buttonCancelProjectEdit"
        android:layout_marginTop="10dp"
        android:text="@string/project_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/projectNameText"
        android:layout_alignStart="@+id/projectNameText"
        android:layout_below="@+id/projectNameText"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <Button
        android:id="@+id/buttonDeleteProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonCancelProjectEdit"
        android:layout_toRightOf="@+id/projectNameText"
        android:layout_toEndOf="@+id/projectNameText"
        android:onClick="buttonDeleteProjectOnClick"
        android:text="@string/deleteProject" />

</RelativeLayout>